<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FirstFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/addressTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:labelFor="@id/editTextAddress"
                    android:text="@string/address_text_view" />

                <EditText
                    android:id="@+id/editTextAddress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="100"
                    android:autofillHints=""
                    android:ems="10"
                    android:inputType="textUri"
                    android:minHeight="48dp"
                    android:text="@string/edit_text_address"
                    tools:ignore="DuplicateSpeakableTextCheck" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/symbolsTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:labelFor="@id/editTextSymbols"
                    android:text="@string/symbols_text_view" />

                <EditText
                    android:id="@+id/editTextSymbols"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="100"
                    android:autofillHints=""
                    android:ems="10"
                    android:inputType="text"
                    android:minHeight="48dp"
                    android:text="@string/edit_text_symbols"
                    tools:ignore="DuplicateSpeakableTextCheck" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/timeoutTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:labelFor="@id/editTextTimeout"
                    android:lines="2"
                    android:text="@string/timeout_text_view" />

                <EditText
                    android:id="@+id/editTextTimeout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="100"
                    android:autofillHints=""
                    android:ems="10"
                    android:inputType="number"
                    android:minHeight="48dp"
                    android:text="@string/edit_text_timeout"
                    tools:ignore="DuplicateSpeakableTextCheck" />
            </TableRow>

        </TableLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/testTnSSubscriptionButton"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="sans-serif-medium"
                android:text="@string/test_tns_subscription_button" />

            <Button
                android:id="@+id/lastQuoteByPromiseButton"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/last_quote_by_promise_button" />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/logView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:listitem="@layout/log_item"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>